--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+*.ipynb filter=lfs diff=lfs merge=lfs -text
 data_visualization/4.3_Plotly_Basics.jupyterlite.ipynb filter=lfs diff=lfs merge=lfs -text
